added allure report